--- a/resumeproject.css
+++ b/resumeproject.css
@@ -7,22 +7,46 @@
 }
 
 html {
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    //letter-spacing: 2px;
+    font-family: 'Poppins', sans-serif;
+    letter-spacing: 1px;
 }
 
 body {
     width: 100%;
-    display: flex;
+    //display: flex;
     background-image: url(izzy1.jpg);
     background-repeat: no-repeat;
     background-attachment: initial;
     background-size: cover;
     height: 500px;
     background-color: #000000;
+    font-family: 'Poppins', sans-serif;
+}
+
+table {
+    border: 2px solid #FFFFFF;
+    border-collapse: collapse;
+}
+
+td, th {
+    padding: 0.5em;
+    border: 2px solid #FFFFFF;
+}
+
+td {
+    text-align: center;
+}
+
+.text {
+    text-align: left;
+}
+
+tr:nth-of-type(odd) {
+    background-color: #b1b1b1;
 }
 
 .container2 {
+    background-color: black;
     width: 100%;
     max-width: 120rem;
     margin: auto;
@@ -198,10 +222,6 @@ nav li {
     background-repeat: no-repeat;
 }
 
-.container {
-    //background-color: black;
-}
-
 .format {
     position: absolute;
     padding: 20px;
@@ -217,6 +237,9 @@ nav li {
 }*/
 
 #abouthero {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
     justify-content: center;
     height: 450px;
     width: 375px;
@@ -275,7 +298,7 @@ section {
 }
 
 
-@media (max-width: 1024px) {
+@media screen and (max-width: 960px) {
     /*nav ul { display: flex; flex-flow: row nowrap; justify-content: space-around; }
     nav li { border-bottom: none; }*/
     
@@ -288,7 +311,7 @@ section {
     h2 { grid-row: 1 / 2; grid-column: 1 / 5; }
     section { grid-row: 2 / 3; grid-column: auto; }
     #special { grid-row: auto; grid-column: 1 / 5; }
-    footer { grid-row: auto; grid-column: 1 / 5; }*/
+    footer { grid-row: auto; grid-column: 1 / 5; }
     form {
         width: 60%;
         display: grid;
@@ -300,9 +323,27 @@ section {
         grid-column: 2 / 3;
         width: 9em;
     }
+    .image-gallery {
+        grid-template-areas: 'img-1 img-1 img-2 img-2'
+                             'img-1 img-1 img-3 img-3'
+                             'img-4 img-4 img-5 img-5'
+
+                             'img-6 img-7 img-7 img-7'
+                             'img-8 img-8 img-8 img-8';
+    }
+    .image-gallery a {
+        height: 20rem;
+    }
+    .img-1 {
+        min-height: 41.5rem;
+    }
+    .img-6 {
+        min-height: 20rem;
+    }
 }
 
-@media (max-width: 768px) {
+
+@media screen and (max-width: 500px) {
     header {
         display: none;
         opacity: 0;
@@ -339,6 +380,23 @@ section {
         display: block;
         float: right;
     }
+    .image-gallery {
+        grid-template-areas: 'img-1 img-1 img-1 img-1'
+                             'img-2 img-2 img-2 img-2'
+                             'img-3 img-3 img-3 img-3'
+                             'img-4 img-4 img-4 img-4'
+                             'img-5 img-5 img-5 img-5'
+                             'img-6 img-6 img-6 img-6'
+                             'img-7 img-7 img-7 img-7'
+                             'img-8 img-8 img-8 img-8';
+    }
+    .image-gallery a,
+    .img-1,
+    .img-6{
+        height: 30rem;
+        min-height: 30rem;
+    }
+    video { width: 100% }
 }
 
 .nav-active {
